# hetzner-storage-box-tool

./: .gitignore  .pdm-python  PLAN.md  README.md  TESTING.md  pyproject.toml  run_integration_tests.sh  run_tests.sh  sample.env  setup.py
.github/workflows/: integration.yml  publish.yml  tests.yml
docs/: api.md  backends.md  development.md  user-guide.md
hsbt/: __init__.py  cli.py  config_editor.py  connection_manager.py  env_var_names.py  key_manager.py  main.py  models.py  process.py  rclone_config_manager.py  rclone_manager.py  storage_box.py  storage_box_manager.py  sudo_test.py  utils.py
hsbt/cli/: __init__.py  _common.py  connection.py  mount.py  transfer.py
hsbt/mount/: __init__.py  autofs.py  base.py  cifs.py  rclone.py  sshfs.py  systemd.py
hsbt/transport/: __init__.py  ssh.py
tests/: conftest.py  test_cli_common.py  test_cli_connection.py  test_cli_mount.py  test_cli_transfer.py  test_config_editor.py  test_connection_manager.py  test_key_manager.py  test_models.py  test_mount_autofs.py  test_mount_cifs.py  test_mount_rclone.py  test_mount_rclone_webdav.py  test_mount_sshfs.py  test_mount_systemd.py  test_process.py  test_smb_cifs_secret_manager.py  test_ssh_transport.py  test_storage_box.py  test_utils.py
tests/integration/: conftest.py  test_mount_autofs_live.py  test_mount_systemd_live.py  test_mount_webdav_live.py  test_storage_box.py  test_transport.py
